--- a/Minecraft.vcxproj.filters
+++ b/Minecraft.vcxproj.filters
@@ -113,7 +113,7 @@
     <ClInclude Include="Main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="UnivVar.h">
+    <ClInclude Include="Global.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
