--- a/Minecraft.vcxproj
+++ b/Minecraft.vcxproj
@@ -78,6 +78,10 @@
     <IncludePath>C:\XAMPP\htdocs\C++ Projects\Minecraft\libraries\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\XAMPP\htdocs\C++ Projects\Minecraft\libraries\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>
+    </IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -146,17 +150,18 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ShaderClass.cpp" />
+    <ClCompile Include="World.cpp" />
     <ClCompile Include="stb.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="VAO.cpp" />
     <ClCompile Include="VBO.cpp" />
-    <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Chunk.h" />
     <ClInclude Include="EBO.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="World.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Player.h" />
@@ -166,14 +171,6 @@
     <ClInclude Include="Global.h" />
     <ClInclude Include="VAO.h" />
     <ClInclude Include="VBO.h" />
-    <ClInclude Include="World.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\default.frag.shader" />
-    <None Include="Resources\default.vert.shader" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="Resources\Textures.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
