--- a/Minecraft.vcxproj
+++ b/Minecraft.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Raycast.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ShaderClass.cpp" />
     <ClCompile Include="World.cpp" />
@@ -161,6 +162,7 @@
     <ClInclude Include="Chunk.h" />
     <ClInclude Include="EBO.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="Raycast.h" />
     <ClInclude Include="World.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Mesh.h" />
